log
ju.,  7 de abr. de 2022 22:53:59: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:30: error: too few arguments to function 'calloc'
     map->buckets = (Pair **) calloc(capacity * sizeof(Pair *));
                              ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
749139a
ju.,  7 de abr. de 2022 22:54:17: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:37: error: passing argument 1 of 'calloc' makes integer from pointer without a cast [-Werror=int-conversion]
     map->buckets = (Pair **) calloc(map->buckets, capacity * sizeof(Pair *));
                                     ^~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: expected 'size_t {aka unsigned int}' but argument is of type 'Pair ** {aka struct Pair **}'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
66a312f
ju.,  7 de abr. de 2022 22:54:39: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
be6c706
ju.,  7 de abr. de 2022 23:04:57: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
bcb8034
ju.,  7 de abr. de 2022 23:05:46: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cf12e1e
ju.,  7 de abr. de 2022 23:07:28: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
a25d855
ju.,  7 de abr. de 2022 23:11:51: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
d60270c
Fri Apr  8 15:13:53 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
a6ef2a5
Fri Apr  8 15:14:40 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|2
total_score: 50/70
6401737
Fri Apr  8 15:22:30 UTC 2022: 
 hashmap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
4d2f170
Fri Apr  8 15:27:46 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
9cd28aa
Fri Apr  8 15:28:48 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f9cbd4d
